--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ Currently, I’m expanding my skills in machine learning and statistics, while s
       <!-- Power BI -->
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card">
-          <img src="images/skills/powerbi.jpeg" class="card-img-top" alt="Power BI">
+          <img src="images/powerbi.jpeg" class="card-img-top" alt="Power BI">
           <div class="card-body">
             <h5 class="card-title">Power BI</h5>
             <p class="card-text">Skilled in creating interactive dashboards and reports using Power BI. Able to transform raw data into meaningful business insights.</p>
@@ -291,7 +291,7 @@ Currently, I’m expanding my skills in machine learning and statistics, while s
       <!-- Machine Learning -->
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card">
-          <img src="images/machinelearning.jpg" class="card-img-top" alt="Machine Learning">
+          <img src="images/machinee.jpg" class="card-img-top" alt="Machine Learning">
           <div class="card-body">
             <h5 class="card-title">Machine Learning</h5>
             <p class="card-text">Knowledge of basic Machine Learning algorithms like Regression, Classification, and Clustering. Hands-on with Python libraries such as Scikit-learn and Pandas for model building and evaluation.</p>
